# linux-c-programming

./: README.md
chapter-1/: hello.c  makefile
chapter-1/archive-example/: bill.c  fred.c  lib.h  makefile  program.c
chapter-11/: Makefile  alarm.c  ctrlc1.c  ctrlc2.c  fork1.c  fork2.c  pexec.c  system1.c  system2.c  text  upper.c  useupper.c  wait  wait.c
chapter-12/: Makefile  thread1.c  thread2.c  thread3.c  thread3a.c  thread4.c  thread5.c  thread6.c  thread7.c  thread8.c
chapter-13/: client.c  client.h  fifo1.c  fifo2.c  fifo3.c  fifo4.c  makefile  pipe1.c  pipe2.c  pipe3.c  pipe4.c  pipe5.c  popen1.c  popen2.c  popen3.c  popen4.c  server.c
chapter-14/: .makefile.swp  makefile  msg1.c  msg2.c  sem1.c  shm1.c  shm2.c  shm_com.h
chapter-2/: first.sh  morning.sh  morning_1.sh  morning_2.sh  page29.sh  page32.sh  page33-1.sh  page33.sh  page34.sh  page35-1.sh  page35-2.sh  page36.sh  page37.sh  page38.sh  page40-1.sh  page40.sh  page41.sh  page42.sh  page43-1.sh  page43-2.sh  page49.sh  page50.sh  page51.sh  page52.sh  page66.sh  try_var.sh  variable.sh
chapter-2/exprot/: export1  export2
chapter-2/page44/: classic_set  latest_set
chapter-2/page68/: collect.sh
chapter-3/: draft1.txt  makefile  printdir.c  simple_read.c  simple_write.c  test_mmap.c
chapter-3/copy_system/: copy_block.c  copy_stdio.c  copy_stdio_block.c  copy_stdio_line.c  copy_system.c  createinputfile.sh
chapter-4/: .makefile.swp  argopt.c  args.c  ctime.c  environ.c  envtime.c  gmtime  gmtime.c  hostget.c  limits.c  localtime  localtime.c  logmask.c  longopt.c  makefile  showenv.c  strftime.c  syslog.c  tmpnam.c  user.c
chapter-5/: badterm.c  kbhit.c  makefile  menu1.c  menu2.c  menu3.c  menu4.c  menu5.c  password.c  sizeterm.c
chapter-6/: Makefile  color.c  curses_app  curses_app.c  ipmode.c  keypad.c  moveadd.c  multiw1.c  pad.c  screen1.c  subsc1.c
chapter-7/: Makefile  dbm1.c  dbm2.c  lock1.c  lock2.c  lock3.c  lock4.c  lock5.c  memory1.c  memory2.c  memory3.c  memory4.c  memory5a.c  memory5b.c  memory6.c
chapter-7/dbm_app/: app_ui.c  cd_access.c  cd_data.h  (+1 more)
cmake/chapter-1/1-2/: CMakeLists.txt
cmake/chapter-1/1-2/src/: Hello.cpp  main.cpp
cmake/chapter-1/cpp-standard/common-method/: CMakeLists.txt
cmake/chapter-1/installing/: CMakeCache.txt  CMakeLists.txt
cmake/chapter-1/installing/src/: Hello.cpp  main.cpp
cmake/chapter-1/third-party-library/: CMakeLists.txt  main.cpp
(+682 files in other folders)
