cmake_minimum_required(VERSION 3.5)
project(hello_headers)
set(SOURCES src/Hello.cpp src/main.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(hello_headers PRIVATE ${PROJECT_SOURCE_DIR}/include)
message(${CMAKE_SOURCE_DIR})
message(${CMAKE_CURRENT_SOURCE_DIR})
message(${PROJECT_SOURCE_DIR})
message(${CMAKE_BINARY_DIR})
message(${CMAKE_CURRENT_BINARY_DIR})
message(${PROJECT_BINARY_DIR})
