cmake_minimum_required(VERSION 3.5)
project(third-party-library)
find_package(Boost 1.73 REQUIRED COMPONENTS ALL)
if(Boost_FOUND)
	message("boost found")
else()
	message(FATAL_ERROR "cannot find boost")
endif()
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE Boost::filesystem)
